src/Components/ReactBigCalendar/Components/InformationContainer/InformationContainer.module.css
.requiter_info {
    border-radius: 4px;
    width: 80%;
    max-width: 300px;
    min-width: 100px;
    background-color: #d9edf7;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 350px;
    padding: 15px;
}

.requiter,
.work_time {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.available_interviews {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 4px;
}

.interview {
    align-items: center;
    width: 100%;
}

.interview_times {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.time {
    font-weight: 700;
}

.font_size_18 {
    font-size: 18px;
}

.save_btn{
    padding: 3px 10px;
    border-radius: 4px;
    background-color: #1890ff;
    color: #fff;
    border: none;
}

.select_work_time_container{
    text-align: left;
}
.work_time_selector{
    margin-left: 10px;
    background-color: #fff;
}
.work_time_selector > div{
    padding: 2px 7px;
}
.work_time_selector > fieldset > legend{
    display: none;
}
.work_time_selector > fieldset{
    top: 0
}

